# onnx-pytorch

./: .gitignore  .gitmodules  Makefile  README.md  install-deps.sh  setup.py  update-subtrees.sh
jenkins/: build.sh
manipulation/: CMakeLists.txt
manipulation/src/: CMakeLists.txt  onnx.pb.cc  onnx.pb.h  test.py
manipulation/src/torch/csrc/jit/: export.cpp  export.h  import.cpp  import.h  ir.cpp  ir.h  roundtrip.cpp  type.cpp  type.h
onnx_pytorch/: __init__.py  pytorch_helper.py  verify.py
test/: debug_embed_params.py  test_caffe2.py  test_common.py  test_models.py  test_operators.py  test_pytorch_helper.py  test_verify.py
test/expect/: TestModels.test_addmm.expect  TestModels.test_alexnet-pbtxt.expect  TestModels.test_alexnet.expect  TestModels.test_at_op.expect  TestModels.test_aten_mode-pbtxt.expect  TestModels.test_aten_mode.expect  TestModels.test_concat-pbtxt.expect  TestModels.test_concat.expect  TestModels.test_dcgan-dcgan-netD-pbtxt.expect  TestModels.test_dcgan-dcgan-netD.expect  TestModels.test_dcgan-dcgan-netG-pbtxt.expect  TestModels.test_dcgan-dcgan-netG.expect  TestModels.test_densenet-121-pbtxt.expect  TestModels.test_densenet-121.expect  TestModels.test_fused_transpose-pbtxt.expect  TestModels.test_fused_transpose.expect  TestModels.test_inception-3-pbtxt.expect  TestModels.test_inception-3.expect  TestModels.test_mnist.expect  TestModels.test_ops-pbtxt.expect  TestModels.test_ops.expect  TestModels.test_permute-pbtxt.expect  TestModels.test_permute.expect  TestModels.test_prelu-pbtxt.expect  TestModels.test_prelu.expect  (+54 more)
(+6 files in other folders)
